GP-2109 Golang analyzer improvements, gostrings.
Add GolangStringAnalyzer.

Improved recovery of function signatures (from method and interfacemetadata, also via stack trace info).

Golang package paths are used as Ghidra namespace.

Propagate RTTI from some built-in runtime alloc methods.